# ddp-experiment

./: CMakeLists.txt  bicycle_model_dynamics_test.cpp  controller_1d.cpp  controller_1d.h  controller_bicycle_model.cpp  controller_bicycle_model.h  main.cpp
husky_control_ilqg/include/ilqg/: boxqp.h  ilqg.h
